<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/optionEvaluateRush"
        android:title="@string/title_evaluate_rush">
        <menu>
            <item
                android:id="@+id/evaluateRush"
                android:title="@string/evaluate_rush" />
            <item
                android:id="@+id/evaluateNotRush"
                android:title="@string/evaluate_not_rush" />
        </menu>
    </item>
    <item
        android:id="@+id/optionEvaluateImportant"
        android:title="@string/title_evaluate_important">
        <menu>
            <item
                android:id="@+id/evaluateImportant"
                android:title="@string/evaluate_important" />
            <item
                android:id="@+id/evaluateNotImportant"
                android:title="@string/evaluate_not_important" />
        </menu>
    </item>
</menu>
