<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdd"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/color_primary"
        app:titleTextColor="@android:color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_40" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAdd">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addWorkEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_195"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_25"
                android:gravity="center"
                android:hint="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonRushEvaluate"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_rush_evaluate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonClassify" />

            <Button
                android:id="@+id/buttonImportantEvaluate"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_important_evaluate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRushEvaluate" />

            <Button
                android:id="@+id/buttonClassify"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_classify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addWorkEditText" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonAddNewWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_195"
                android:layout_marginEnd="@dimen/dp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addWorkEditText"
                app:srcCompat="@drawable/ic_done_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
